# kurva

./: README.md  app.py  config.py  main.py  models.py  pyproject.toml  replit.md  routes.py
api/: auth.py  dashboard.py  reports.py  scans.py  vulnerabilities.py
services/: ai_service.py  email_service.py  report_service.py  scanner_service.py  threat_intelligence.py
templates/: ai_insights.html  alerts.html  base.html  dashboard.html  index.html  login.html  reports.html  scans.html  settings.html  vulnerabilities.html
templates/reports/: new.html
templates/scans/: detail.html  new.html
templates/vulnerabilities/: detail.html
utils/: email.py  encryption.py  logger.py  security.py
