[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "google-genai>=1.25.0",
    "openai>=1.95.1",
    "flask-migrate>=4.1.0",
    "prometheus-client>=0.22.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "flask-cors>=6.0.1",
    "flask-mail>=0.10.0",
    "flask-limiter>=3.12",
    "werkzeug>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "ipaddress>=1.0.23",
    "validators>=0.35.0",
    "xmltodict>=0.14.2",
    "pytz>=2025.2",
    "apscheduler>=3.11.0",
    "flask-httpauth>=4.8.0",
    "cryptography>=45.0.5",
    "passlib>=1.7.4",
    "pygments>=2.19.2",
    "toml>=0.10.2",
    "flask-wtf>=1.2.2",
    "mypy>=1.16.1",
    "itsdangerous>=2.2.0",
    "pycryptodome>=3.23.0",
    "requests>=2.32.4",
    "python-whois>=0.9.5",
    "pdfkit>=1.0.0",
    "markdown>=3.8.2",
    "unidecode>=1.4.0",
    "jinja2>=3.1.6",
    "pyotp>=2.9.0",
    "pillow>=11.3.0",
    "beautifulsoup4>=4.13.4",
    "marshmallow>=4.0.0",
    "cerberus>=1.3.7",
    "pytest-flask>=1.3.0",
    "google-generativeai>=0.8.5",
    "lxml>=6.0.0",
    "asyncio-mqtt>=0.16.2",
    "voluptuous>=0.15.2",
    "faker>=37.4.0",
    "pytest-mock>=3.14.1",
    "bcrypt>=4.3.0",
    "flask-caching>=2.3.1",
    "black>=25.1.0",
    "scapy>=2.6.1",
    "flask-restx>=1.3.0",
    "pyyaml>=6.0.2",
    "python-slugify>=8.0.4",
    "pytest-cov>=6.2.1",
    "numpy>=2.3.1",
    "celery>=5.5.3",
    "qrcode>=8.2",
    "paramiko>=3.5.1",
    "python-magic>=0.4.27",
    "chardet>=5.2.0",
    "tldextract>=5.3.0",
    "aiohttp>=3.12.14",
    "flake8>=7.3.0",
    "safety>=3.6.0",
    "flask-socketio>=5.5.1",
    "structlog>=25.4.0",
    "eventlet>=0.40.1",
    "phonenumbers>=9.0.9",
    "factory-boy>=3.3.3",
    "coverage>=7.9.2",
    "certifi>=2025.7.9",
    "dnspython>=2.7.0",
    "schedule>=1.2.2",
    "bleach>=6.2.0",
    "python-dotenv>=1.1.1",
    "bandit>=1.8.6",
    "python-multipart>=0.0.20",
    "geoip2>=5.1.0",
    "maxminddb>=2.7.0",
    "gevent>=25.5.1",
    "flask-marshmallow>=1.3.0",
    "marshmallow-sqlalchemy>=1.4.2",
    "jsonschema>=4.24.0",
    "wtforms>=3.2.1",
    "python-nmap>=0.7.1",
    "isort>=6.0.1",
    "aiosmtplib>=4.0.1",
    "pandas>=2.3.1",
    "python-dateutil>=2.9.0.post0",
    "urllib3>=2.5.0",
    "tzlocal>=5.3.1",
    "argon2-cffi>=25.1.0",
    "configparser>=7.2.0",
    "html2text>=2025.4.15",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
